# cmu_vla_challenge_unity

./: .gitignore  README.md  system_bring_up.sh
src/bbox_calculation/: CMakeLists.txt  package.xml
src/bbox_calculation/launch/: bbox_broadcast.launch  bbox_calculation.launch
src/bbox_calculation/src/: bboxBroadcast.cpp  bboxCalculation.cpp
src/local_planner/launch/: local_planner.launch
src/semantic_scan_generation/: CMakeLists.txt  package.xml
src/semantic_scan_generation/launch/: semantic_scan_generation.launch
src/semantic_scan_generation/src/: semanticScanGeneration.cpp
src/teleop_rviz_plugin/src/: teleop_panel.cpp  teleop_panel.h
src/terrain_analysis/launch/: terrain_analysis.launch
src/terrain_analysis/src/: terrainAnalysis.cpp
src/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
src/vehicle_simulator/: CMakeLists.txt
src/vehicle_simulator/launch/: system_unity.launch  vehicle_simulator.launch
src/vehicle_simulator/mesh/unity/: readme.txt
src/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/vehicle_simulator/src/: vehicleSimulator.cpp
src/visualization_tools/launch/: visualization_tools.launch
src/visualization_tools/src/: visualizationTools.cpp
src/waypoint_converter/: CMakeLists.txt  package.xml
src/waypoint_converter/launch/: waypoint_converter.launch
src/waypoint_converter/src/: waypointConverter.cpp
src/waypoint_rviz_plugin/include/: waypoint_tool.h
src/waypoint_rviz_plugin/src/: waypoint_tool.cpp
